# mindocr

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CONTRIBUTING_CN.md  MANIFEST.in  README.md  README_CN.md  Untitled.ipynb  __init__.py  convert_datasets.sh  db.yaml  export.py  index.html  mkdocs.yml  package.sh  pyproject.toml  requirements.txt  rnn.py  setup.py  sitemap.xml  test_mindir_infer.py  test_ms_color_mode.py  train.py  transform_tutorial.ipynb  transform_tutorial.md  version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  main.yml  python-publish.yml
cn/: index.html
configs/: README.md  config_description.md  readme.md  参数配置文档说明.md
configs/det/: README.md  README_CN.md  db++_r50_icdar15.yaml  db_r50_icdar15.yaml  db_r50_icdar15.yaml.bakup  test.yaml
configs/kie/: ser_layoutlm_xfund_zh.yaml  ser_layoutxlm_xfund_zh.yaml
configs/rec/: crnn_icdar15.yaml  r34_bilstm_ctc.yaml  rec_r34_bilstm_ctc.yaml  test.yaml  vgg7_bilstm_ctc.yaml
configs/table/: README.md  README_CN.md  table_master.yaml
datasets/borndigital/: index.html
datasets/casia10k/: index.html
datasets/ccpd/: index.html
datasets/chinese_text_recognition/: index.html
datasets/cocotext/: index.html
datasets/converters/: index.html
datasets/ctw/: index.html
datasets/ctw1500/: index.html
datasets/ic19_art/: index.html
datasets/icdar2015/: index.html
datasets/lsvt/: index.html
datasets/mlt2017/: index.html
datasets/mtwi2018/: index.html
datasets/pubtabnet/: index.html
deploy/cpp_infer/src/: CMakeLists.txt  build.sh  main.cpp
deploy/cpp_infer/src/base/blocking_queue/: blocking_queue.h
deploy/cpp_infer/src/base/command_parser/: command_parser.cpp  command_parser.h
deploy/cpp_infer/src/base/config_parser/: config_parser.cpp  config_parser.h
deploy/cpp_infer/src/base/status_code/: status_code.h
deploy/cpp_infer/src/data_process/postprocess/: db_postprocess.cpp  db_postprocess.h  rec_postprocess.cpp  rec_postprocess.h
deploy/cpp_infer/src/parallel/data_type/: constant.h  data_type.h
deploy/cpp_infer/src/parallel/framework/: module_base.cpp  module_base.h  module_factory.h  module_manager.cpp  module_manager.h
deploy/cpp_infer/src/parallel/module/classification/: cls_infer_node.cpp  cls_infer_node.h  cls_post_node.cpp  cls_post_node.h  cls_pre_node.cpp  cls_pre_node.h
deploy/cpp_infer/src/parallel/module/common/: collect_node.cpp  collect_node.h  hand_out_node.cpp  hand_out_node.h
deploy/cpp_infer/src/parallel/module/detection/: det_infer_node.cpp  det_infer_node.h  det_post_node.cpp  det_post_node.h  det_pre_node.cpp  det_pre_node.h
deploy/cpp_infer/src/parallel/module/recognition/: rec_infer_node.cpp  rec_infer_node.h  rec_post_node.cpp  rec_post_node.h  rec_pre_node.cpp  rec_pre_node.h
deploy/cpp_infer/src/profile/: profile.cpp  profile.h
deploy/cpp_infer/src/utils/: utils.cpp  utils.h
deploy/infer_pipeline/src/demo/cpp/: CMakeLists.txt  build.sh  main.cpp
deploy/infer_pipeline/src/demo/cpp/Modules/CrnnPost/: CrnnPost.cpp
deploy/infer_pipeline/src/demo/cpp/Modules/DbnetPost/: DbnetPost.cpp  DbnetPost.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/ClsInferProcess/: ClsInferProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/ClsPostProcess/: ClsPostProcess.cpp  ClsPostProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/ClsPreProcess/: ClsPreProcess.cpp
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/CollectProcess/: CollectProcess.cpp  CollectProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/CrnnInferProcess/: CrnnInferProcess.cpp  CrnnInferProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/CrnnPostProcess/: CrnnPostProcess.cpp  CrnnPostProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/CrnnPreProcess/: CrnnPreProcess.cpp  CrnnPreProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/DbnetInferProcess/: DbnetInferProcess.cpp  DbnetInferProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/DbnetPostProcess/: DbnetPostProcess.cpp  DbnetPostProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/DbnetPreProcess/: DbnetPreProcess.cpp  DbnetPreProcess.h
deploy/infer_pipeline/src/demo/cpp/Modules/Processors/HandOutProcess/: HandOutProcess.cpp
deploy/infer_pipeline/src/demo/cpp/Modules/Signal/: Signal.cpp  Signal.h
deploy/infer_pipeline/src/demo/cpp/Modules/Utils/: Utils.cpp  Utils.h
deploy/infer_pipeline/src/demo/cpp/ascendbase/BlockingQueue/: BlockingQueue.h
deploy/infer_pipeline/src/demo/cpp/ascendbase/CommandParser/: CommandParser.h
deploy/infer_pipeline/src/demo/cpp/ascendbase/ConfigParser/: ConfigParser.cpp  ConfigParser.h
deploy/infer_pipeline/src/demo/cpp/ascendbase/Framework/ModuleManager/: ModuleBase.h  ModuleFactory.h  ModuleManager.cpp  ModuleManager.h
deploy/infer_pipeline/src/demo/cpp/config/: setup.config
docs/: replace_path.sh
docs/cn/: index.md  (+7 more)
en/: index.html
inference_results/: det_results.txt
mindcv/: README.md  __init__.py
mindocr/: __init__.py  version.py
mindviewer/: MindSpore_Viewer软件设计说明书.md
pipeline/: infer.py  infer_args.py  parallel_pipeline.py
requirements/: dev.txt  docs.txt  modelarts.txt
search/: search_index.json
tests/: test_export_convert.py
tmp_det/: log_eval_None.txt
tools/: __init__.py  arg_parser.py  convert_datasets.sh  data_for_export_convert.py  eval.py  eval_benchmark.py  export.py  export_convert_tool.py  export_convert_tool.sh  export_convert_tool_runtest.sh  export_tool.sh  export_tool_runtest.sh  model_converter.sh  paddle2mindir.sh  param_converter.py  param_converter_from_torch.py  train.py
zh/: index.html
(+1329 files in other folders)
